* Missing files * deprecated file.toURL fixes * style fixes